# thesis-now-ai

./: .gitignore  ANALYTICS_SETUP.md  CHANGELOG.md  CLAUDE 3.md  CLAUDE 4.md  CLAUDE.md  README.md  SKILLS_GUIDE.md  skills-lock.json
.claude/: settings.json
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  run_tests.ps1  run_tests.sh  schemas.py  setup.ps1  setup.sh  test_connectors.py  test_connectors_local.py  test_nlp.py  test_scoring.py  test_search.py
backend/connectors/: alicia.py  arxiv.py  core.py  crossref.py  dialnet.py  doaj.py  europepmc.py  openalex.py  pubmed.py  semantic_scholar.py
backend/prompts/: academic_query.txt
backend/services/: embeddings.py  nlp_service.py  scoring.py  search_service.py
docs/: alcance.md  arquitectura.md  audit-ui-ux-2026-06.md  color-picker.html  databases-api.md  marca.md  plan-trabajo.md  preview-design-v2.html  preview-design.html  preview-landing-v2.html  preview-search-v2.html  rediseno-ux.md  resumen-sesion-2026-06-09.md  resumen-sesion-2026-06-10.md  resumen-sesion-2026-06-11.md  semantic-scholar-api.md  versionamiento.md
frontend/: capture-screenshot.js  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/board/: page.tsx
frontend/app/debug/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/components/: PostHogProvider.tsx
frontend/lib/: i18n.ts  useAuthProtection.ts  useSavedPublications.ts  useSearch.ts  useTracking.ts  useTranslation.ts
(+18 files in other folders)
