[tool.poetry]
name = "thesis-now-backend"
version = "0.1.0"
description = "ThesisNow Backend: FastAPI service for bibliographic search automation"
authors = ["4lvaro4chin <digitalcorepro@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
python-dotenv = "^1.0.0"
openai = "^1.3.0"
httpx = "^0.25.0"
pydantic = "^2.5.0"
supabase = "^2.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
